# aoc-2025

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
benches/: aoc_days.rs
src/: lib.rs  main.rs
src/days/: eight.rs  five.rs  four.rs  nine.rs  one.rs  seven.rs  six.rs  three.rs  two.rs
