[package]
name = "aoc-2025"
version = "0.1.0"
edition = "2024"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:arboard"]

[dependencies]
clap = { version = "4.5", features = ["derive"], optional = true }
arboard = { version = "3.6", default-features = false, optional = true }

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "aoc_days"
harness = false
